# value_partner

./: .coveragerc  .gitignore  .pre-commit-config.yaml  BETA_TESTING.md  BETA_TESTING_STRATEGY.md  BETA_TESTING_SUMMARY.md  BETA_USER_ONBOARDING.md  DEBUGGING_GUIDE.md  DEPLOYMENT_GUIDE.md  LAUNCH_READINESS_UPDATE.md  README.md  SECURITY_AND_DEPLOYMENT_GUIDE.md  TEST_ISOLATION_FIX.md  base_code.md  celery.py  deploy.sh  deploy_local.sh  file::memory:  mypy.ini  netlify.toml  portfolio.db  psutil.py  requirements.txt  test.db  test_external_api.py  test_logging.py  value_partner.db  windsurf_deployment.yaml
app/: __init__.py
compliance/: generate_report.py
data/: README.md  requirements.txt
docs/: database_schema.md
frontend/: FRONTEND_UPGRADES.md  netlify.toml  package-lock.json  package.json  windsurf_deployment.yaml
infra/: README.md  helm_release.tf  main.tf  variables.tf
models/: MLproject  README.md  __init__.py  docker-compose.yml  requirements.txt  setup.py
scripts/: run_beta_tests.py  smoke_test.py
sdk/: pyproject.toml  setup.py
sdk/valueinvest_sdk/: __init__.py  client.py
sdk/valueinvest_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/: .env  .env.example  Dockerfile  README.md  README_CELERY.md  __init__.py  alembic.ini  dev_test.py  docker-compose.monitoring.yml  monitoring-config.yaml  portfolio.db  requirements.txt  requirements_beta.txt  run_celery.py  setup.py  test_reconciliation.py
tests/: conftest.py  test_alpaca_service.py  test_analytics_routes.py  test_analytics_service.py  test_api_endpoints.py  test_auth.py  (+18 more)
(+193 files in other folders)
